--- a/src/styles.scss
+++ b/src/styles.scss
@@ -23,9 +23,9 @@ h1, h2, h3, h4, h5, h6{
 }
 
 :root {
-  --navigation-width: 2em;
+  --navigation-width: 2rem;
   --navigation-font-size: 1.2rem;
-  --navigation-font-size-responsive: 18px;
+  --navigation-font-size-responsive: 1.2rem;
   --navigation-background-color: #fff;
   --navigation-dot-color: #bbb;
   --navigation-font-color: #000;
